[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Computer.gd" type="Script" id=1]
[ext_resource path="res://World/assets/computer_off.png" type="Texture" id=2]
[ext_resource path="res://World/assets/computer.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.4135, 15.6104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.04579, 4.55532 )

[node name="Computer" type="StaticBody2D"]
position = Vector2( -0.0544434, 0.059576 )
collision_mask = 0
script = ExtResource( 1 )

[node name="InterractZone" type="Area2D" parent="."]
position = Vector2( 0.358055, -7.49504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterractZone"]
position = Vector2( -0.303612, 2.17233 )
shape = SubResource( 1 )

[node name="computer_on" type="Sprite" parent="."]
position = Vector2( 0.0544434, -13.3227 )
texture = ExtResource( 3 )

[node name="computer_off" type="Sprite" parent="."]
position = Vector2( 0.0544434, -13.3227 )
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0.0735588, -10.8187 )
shape = SubResource( 2 )
[connection signal="body_entered" from="InterractZone" to="." method="_on_InterractZone_body_entered"]
[connection signal="body_exited" from="InterractZone" to="." method="_on_InterractZone_body_exited"]
